# FailSafeRAG

./: .gitignore  ARCHITECTURE.md  README.md  agents.md  pyproject.toml
.github/workflows/: tests.yml
artifacts/phase1/: phase1_e2e_summary.json
artifacts/phase3/: ablation_summary.json  error_analysis_examples.json  faar_full_summary.json  faar_no_backtrack_summary.json  faar_no_diagnosis_summary.json  faar_no_vlm_summary.json  metrics_summary.json  naive_rag_summary.json  retrieval_metrics.csv
artifacts/phase4/: case_studies.json  claim_assessment.json  phase4_summary.json  profile_deltas_vs_baseline.csv
data/phase0/: manual_labels.csv  phase0_asset_summary.json  sample_manifest.csv  sample_meta.json
docs/: faar_execution_plan.md  faar_phase1_completion_report.md  index.md  phase1_acceptance_checklist.md
docs/archives/: index.md  phase1_archive_index.md  phase2_archive_index.md  phase3_archive_index.md  phase4_archive_index.md
docs/phases/: index.md
docs/repo_architecture/: explanation_system_overview.md  howto_run_phase1.md  index.md  reference_components.md  tutorial_first_run.md
docs/repo_handbook/: architecture_overview.md  data_and_artifacts_map.md  documentation_style_standard.md  index.md  release_notes.md  repo_overview.md  runtime_components.md
docs/reports/: index.md  (+6 more)
scripts/: run_phase1_demo.sh
tests/: test_answering.py  test_cli_payload.py  test_experiment_runner.py  test_graph_integration.py  test_metrics.py  test_phase4_analysis.py  test_phase4_cli.py  test_quality.py  test_recovery.py  test_results_aggregator.py  test_settings.py
(+329 files in other folders)
